# cookiecutterplus

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  cookiecutterplus.py  pyproject.toml  setup.py
.github/workflows/: ci.yaml  docker.yml
api/: __init__.py  app.py  schema.py
cookiecutterplus/: __init__.py  ccpbuilder.py  ccpcli.py  ccpexception.py  ccpstate.py  cookiecutterplus.py
persistence/: __init__.py  githubpersistence.py  githubpersister.py  localpersistence.py  localpersister.py  persistencebuilder.py  templatepersister.py
tests/: test_cookiecutterplus.py  test_cookiecutterplusapi.py  test_cookiecutterpluspersistence.py  test_cookiecutterschema.py
tests/fixtures/basic/: ccplus.json  cookiecutter.json
tests/fixtures/basic-backwards/: cookiecutter.json
tests/fixtures/basic-backwards/{{ cookiecutter.project_slug }}/: simple.yaml
tests/fixtures/basic/{{ cookiecutter.project_slug }}/: simple.yaml
